[package]
name = "museum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "^0.26.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "^0.11.0", features = ["wayland"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "^0.11.0", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_sprite", "webgl2"]}

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'
lto = true
strip = true